# ams2_championships

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  championships.html
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: Career.md  Data-and-Backup.md  Getting-Started.md  Home.md  Live-Session.md  Managing-Championships.md
src/: ams2_shared_memory.rs  championship_html.rs  config.rs  data_store.rs  data_store_tests.rs  http.rs  lib.rs  main.rs  server_tests.rs  session_recorder.rs  spotter.rs  websocket.rs
src/assets/: career.js  config.js  live.js  main.js  manage.js  script.js  style.css  telemetry.js  track_map.js  utils.js
src/tests/: config.rs  data_store.rs  server.rs  session_recorder.rs
tests/: integration_test.rs
tests/fixtures/: minimal.xml
