[package]
name = "ams2_championship"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_Foundation"] }
